improved dark mode on compare page; light mode will also apply correctly

--- a/docs/scss/custom.scss
+++ b/docs/scss/custom.scss
@@ -96,6 +96,10 @@ body.dark {
     .share {
         filter: invert(.9);
     }
+
+    .custom-select {
+        background: url("data:image/svg+xml,%3csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 4 5'%3e%3cpath fill='rgb(200,200,200)' d='M2 0L0 2h4zm0 5L0 3h4z'/%3e%3c/svg%3e") no-repeat right .75rem center/8px 10px;
+    }
 }
 
 .input-min-width {
